2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP51932.cs :
	  Encoding.GetChars() does not handle incomplete bytes but
	  Decoder.GetChars() should do it (which was has vanished
	  when I fixed CP51932 4 days ago). Now it uses Decoder which
	  preserves incomplete byte like CP932 and CP54936.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP932.cs :
	  Implemented Decoder to handle incomplete bytes correctly. Hold
	  different incomplete bytes for GetChars() and GetCharCount().
	  "reflesh" parameter in 2.0 is now handled correctly.
	  Now GetChars()/GetCharCount() in Encoding are implemented
	  correctly to use Decoder.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	Fixed bug #77307.
	* GB18030Encoding.cs : GetEncoder() and GetDecoder() should be
	  overriden. in the Encoder, refresh parameter should handle
	  incomplete field at its end of processing. Also it should
	  differentiate GetByteCount() and GetChars() for its internal
	  state.
	* GB18030Source.cs : handle end index of GB18030Map as inclusive,
	  not exclusive. Reject out-of-range GBX conversion.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* GB18030Encoding.cs : GetChars() ditto. Fixed bug #77306.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP949.cs : GetChars() exactly the same fix as CP950.
	  Fixed bug #77298.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP950.cs : GetChars() should filter out invalid index to internal
	  conversion array. Fixed bug #77274.

2006-01-17  Atsushi Enomoto  <atsushi@ximian.com>

	* DbcsEncoding.cs CP950.cs CP932.cs CP936.cs CP51932.cs CP949.cs :
	  Made all as really serializable. Removed references to DbcsConvert
	  and added GetConvert() methods instead.

2006-01-17  Atsushi Enomoto  <atsushi@ximian.com>

	* DbcsEncoding.cs ISO2022JP.cs GB18030Encoding.cs CP950.cs
	  CP932.cs CP936.cs CP51932.cs CP949.cs (All) :
	  Marked as [Serializable].

2006-01-16  Atsushi Enomoto  <atsushi@ximian.com>

	* CP936.cs :