@@ -1,3 +1,8 @@
+2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* I18N.CJK.Test.cs :
+	  added Decoder936Refresh() and Decoder936NoRefresh().
+
 2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* I18N.CJK.Test.cs :
